# quant-research-platform

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: current_chatgpt_context_handoff.md  current_claude_context_handoff.md  engineering_workflow.md  implementation_context_governance.md  strategy_decision_record.md  traceability_matrix.md
docs/engineering_spec/: 01_architecture_overview.md  02_data_layer.md  03a_feature_engineering.md  03b_target_generation.md  03c_model_layer_mlflow.md  04_backtest_attribution_validation.md  05_portfolio_paper_order_intent.md  06_operator_ui.md
docs/reviews/: 02_data_layer_traceability_updates (4).md  2026-04-26_handoff_spec_02_data_layer.md  2026-04-26_spec_01_architecture_overview_approval.md  2026-04-27_spec_02_data_layer_approval.md  2026-04-28_spec_03_features_targets_models_handoff_packet.md  2026-04-29_spec_03a_feature_engineering_approval.md  2026-04-29_spec_03a_feature_engineering_traceability_updates.md  2026-04-29_spec_03b_target_generation_approval.md  2026-04-29_spec_03b_target_generation_traceability_updates.md  2026-04-30_spec_03c_model_layer_mlflow_approval.md  2026-04-30_spec_03c_model_layer_mlflow_traceability_updates.md  2026-04-30_spec_04_backtest_attribution_validation_approval.md  2026-04-30_spec_04_backtest_attribution_validation_traceability_updates.md  2026-04-30_spec_05_portfolio_paper_order_intent_approval.md  2026-04-30_spec_05_portfolio_paper_order_intent_traceability_updates.md  2026-04-30_spec_06_operator_ui_approval.md  (+2 more)
tests/: __init__.py
(+33 files in other folders)
